<resources>
    <string name="app_name">Smart Diabtetic Care</string>
    <string name="start_activity_swicther_tag_1">Keeping Your Sugar In Check, One Prick At A Time</string>
    <string name="start_activity_swicther_tag_2">Empowering Life Beyond Limits</string>
    <string name="start_activity_swicther_tag_3">Measure, Monitor, Manage - Take Control of Your Health</string>
    <string name="start_activity_swicther_tag_4">Simplifying Diabetes Management For A Better Life</string>
    <string name="start_activity_swicther_tag_5">Your Health In Your Hands, Your Future In Your Control</string>
    <string name="app_icon_desc">App Logo</string>
    <string name="already_member">Already a Member?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="back">Back</string>
    <string name="email">Email Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="send_reset">Send reset link</string>
    <string name="phone">Phone</string>
    <string name="measure">Measure</string>
    <string name="measure_now">Measure Now</string>
    <string name="measure_now_arrow">Measure Now ></string>
    <string name="measure_animation">Measure Animation</string>
    <string name="last_reading">Last Reading</string>
    <string name="recent_measurements">Recent Measurements</string>
    <string name="_3_days_s">3 days: %s</string>
    <string name="_7_days_s">7 days: %s</string>
    <string name="_30_days_s">30 days: %s</string>
    <string name="recent">Recent</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="details">Details</string>
    <string name="average_3_days">Average (3 days)</string>
    <string name="average_weekly">Average (Weekly)</string>
    <string name="average_monthly">Average (monthly)</string>
    <string name="tap_to_measure">Tap to measure</string>

    <array name="interval_options">
        <item>3 Days</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </array>
</resources>