<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="16dp">

        <!-- Back Arrow -->
        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back" />

        <LinearLayout
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/backArrow">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/app_icon"
                    android:maxHeight="1dp"
                    android:contentDescription="@string/app_icon_desc"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textSize="25sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorPrimary"
                    />
        </LinearLayout>

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_title"
            android:text="@string/sign_in"
            android:textSize="27sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTitle"
            android:layout_marginTop="24dp"
            android:background="@drawable/editext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:background="@drawable/editext_background"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button_background"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_below="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:paddingTop="16dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
