<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsightsFragment"
    android:orientation="vertical">

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:background="@drawable/rounded_header"
           ></TextView>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
                android:orientation="vertical"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/blood_sugar"
                   android:textSize="30sp"
                   android:textColor="@color/white"
                   />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/details"
                   android:textSize="18sp"
                   android:layout_marginTop="15dp"
                   android:layout_marginBottom="10dp"
                   android:textColor="@color/white"
                   />
           </LinearLayout>

        <HorizontalScrollView
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_background"
                    android:backgroundTint="@color/white"
                    android:padding="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="8dp">

                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:padding="10dp">
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/recent"
                           android:textSize="18sp" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="80.0 mg/dL"
                           android:textSize="20sp"
                           android:textStyle="bold"/>
                   </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_background"
                    android:backgroundTint="@color/white"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/average_3_days"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100.0 mg/dL"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_background"
                    android:backgroundTint="@color/white"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/average_weekly"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100.0 mg/dL"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_background"
                    android:backgroundTint="@color/white"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="60dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/average_monthly"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100.0 mg/dL"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </HorizontalScrollView>

       </LinearLayout>

   </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/inteval_selector"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/interval_options"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bglChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
